Fixed buttons size and alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: sans-serif;
-  font-size: 20px;
+  font-size: 19px;
   color: white;
 }
 
